--- a/index-meta.html
+++ b/index-meta.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
   <head>
-    <title>My Music Encoding Project</title>
+    <title>Gregor Long Music Analytics</title>
     <meta charset="utf-8">
     <meta name="description" content="My project">
-    <meta name="author" content="Me">
+    <meta name="author" content="Gregor Long">
     <link rel="stylesheet" href="css/style.css" media="all" />
     <script src="js/verovio-toolkit.js"></script>
     <script src="js/utils.js"></script>
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-      <h1>My project</h1>
+      <h1>Gregor Long Music Analytics</h1>
       <h2>Metadata</h2>
       <p id="meta"></p>
 
@@ -23,6 +23,10 @@
 
     <!-- **** DO NO EDIT BELOW THIS LINE **** -->
     <!-- * **** **** **** **** **** **** **** -->
+	<div id="controls">
+	<button id="prev">&lt;</button>
+	<button id="next">&gt;</button>
+	</div>
     <div id="score">
       <!-- THIS IS WHERE THE SCORE GOES AUTOMATICALLY -->
     </div>
@@ -30,9 +34,8 @@
    <script src="js/index.js"></script>
     <script>
       var xhr = new XMLHttpRequest()
-      xhr.open('GET', 'data/Wii ChannelGL.mei') // <-- change this to the right file
+      xhr.open('GET', 'data/MiiChannel.mei') // <-- change this to the right file
       xhr.send(null)
-
       /* Deal with the response */
       xhr.onreadystatechange = function () {
         var DONE = 4
@@ -44,9 +47,16 @@
             /* If your element has an authURI attribute, copy the folloiwng line, being sure to replace the "MY-XML-ID" with your element's actual xml:id.
             document.querySelector("#meta").innerHTML += "<a href=\"" + meiDoc.querySelector("[*|id='MY-XML-ID']").getAttribute('authURI') +"\"><p>" + meiDoc.querySelector("[*|id='MY-XML-ID']").textContent + "</p></a>"
            */
+			document.querySelector("#meta").innerHTML += "<a href=\"" + meiDoc.querySelector("[*|id='t-3']").getAttribute('authURI') +"\"><p>" + meiDoc.querySelector("[*|id='t-3']").textContent + "</p></a>"
+			document.querySelector("#meta").innerHTML += "<a href=\"" + meiDoc.querySelector("[*|id='e-2']").getAttribute('authURI') +"\"><p>" + meiDoc.querySelector("[*|id='e-2']").textContent + "</p></a>"
+			document.querySelector("#meta").innerHTML += "<a href=\"" + meiDoc.querySelector("[*|id='c-2']").getAttribute('authURI') +"\"><p>" + meiDoc.querySelector("[*|id='c-2']").textContent + "</p></a>"
+			document.querySelector("#meta").innerHTML += "<a href=\"" + meiDoc.querySelector("[*|id='a-1']").getAttribute('authURI') +"\"><p>" + meiDoc.querySelector("[*|id='a-1']").textContent + "</p></a>"
            /* If your element does not have an authURI attribute, copy the following line, being sure to replace the "MY-XML-ID" with your element's actual xml:id.
             document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='m-8']").textContent + "</p>"
             */
+			document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='t-1']").textContent + "</p>"
+			document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='t-2']").textContent + "</p>"
+			document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='c-1']").textContent + "</p>"
           }
         }
       }
