--- a/MiiChannel.html
+++ b/MiiChannel.html
@@ -36,7 +36,7 @@
 		<h2>Analysis</h2>
 		<h3>Music21</h3>
 		<img src="Histograms/MiiChannelHistogram.png" alt="MiiChannel Music21 Histogram" width="400" height="400">
-		<img src="Histograms/MiiChannelPianoRollpng.png" alt="MiiChannel Music21 Piano Roll" width="600" height="360">
+		<img src="Piano Rolls/MiiChannelPianoRollpng.png" alt="MiiChannel Music21 Piano Roll" width="600" height="360">
 		<p>
 		<h3>jSymbolic</h3>
 		<table>
