--- a/MiiChannel.html
+++ b/MiiChannel.html
@@ -82,7 +82,7 @@
 		</p>
 	</div>
     <!-- THIS CALLS THE SCRIPT THAT GETS THE MEI SCORE -->
-   <script src="js/smbmei.js"></script>
+   <script src="js/MiiChannel.js"></script>
     <script>
       var xhr = new XMLHttpRequest()
       xhr.open('GET', 'data/MiiChannel.mei') // <-- change this to the right file
