--- a/lavandertown.html
+++ b/lavandertown.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Mii Channel Theme - Gregor Long</title>
+    <title>Final Fantasy VII Victory Fanfare - Gregor Long</title>
     <meta charset="utf-8">
     <meta name="description" content="Music Analytics Project">
     <meta name="author" content="Gregor Long">
