--- a/lavandertown.html
+++ b/lavandertown.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Final Fantasy VII Victory Fanfare - Gregor Long</title>
+    <title>Pokemon: Lavander Town Theme- Gregor Long</title>
     <meta charset="utf-8">
     <meta name="description" content="Music Analytics Project">
     <meta name="author" content="Gregor Long">
@@ -16,7 +16,7 @@
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
       <h1>Gregor Long Music Analytics Project</h1>
-      <h2>Compisition Metadata</h2>
+      <h2>Composition Metadata</h2>
       <p id="meta"></p>
 
     </div>
@@ -81,10 +81,10 @@
 		</p>
 	</div>
     <!-- THIS CALLS THE SCRIPT THAT GETS THE MEI SCORE -->
-   <script src="js/FFVII.js"></script>
+   <script src="js/lavandertown.js"></script>
     <script>
       var xhr = new XMLHttpRequest()
-      xhr.open('GET', 'data/FFVII_VictoryFanfare.mei') // <-- change this to the right file
+      xhr.open('GET', 'data/Lavender Town.mei') // <-- change this to the right file
       xhr.send(null)
       /* Deal with the response */
       xhr.onreadystatechange = function () {
