--- a/lavandertown.html
+++ b/lavandertown.html
@@ -56,7 +56,7 @@
 				<td align="left">78</td>
 				<td align="left">5.473</td>
 				<td align="left">84</td>
-				<td align="left">6/td>
+				<td align="left">6</td>
 				<td align="left">0.142</td>
 				</tr></tbody>
 		</table>
@@ -81,7 +81,7 @@
 		</p>
 	</div>
     <!-- THIS CALLS THE SCRIPT THAT GETS THE MEI SCORE -->
-   <script src="js/lavandertown.js"></script>
+   <script src="js/LavanderTown.js"></script>
     <script>
       var xhr = new XMLHttpRequest()
       xhr.open('GET', 'data/Lavender Town.mei') // <-- change this to the right file
