--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	  <li><p><a href="https://Wudidge28.github.io/MCA/lavandertown.html">Pokemon Lavander Town Music</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/FFVII.html">Final Fantasy VIi Victory Fanfare</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/about.html">About</a></p></li>
-	  <li><p><a href="https://Wudidge28.github.io/MCA/
+	  <li><p><a href="https://Wudidge28.github.io/MCA/SonicVisualiserFiles.html">Sonic Visualizer Analysis</a><p></li>
 	    </ul>
     </div>
 
