--- a/SonicVisualiserFiles.html
+++ b/SonicVisualiserFiles.html
@@ -17,7 +17,8 @@
       <!-- ADD YOUR HTML CONTENT HERE! -->
       <h1>Gregor Long Music Analytics Project</h1>
 	  <h2>Utillising Sonic Visualiser to Transcribe and Analyse Music</h2>
-	  <p>Outwith the Theme of the dataset relayed on the other pages, the following tracks were obtained from http://freemusicarchive.org/. They
+	  <p>Outwith the Theme of the dataset relayed on the other pages, the following tracks were obtained from 
+		  <a href="http://freemusicarchive.org/">freemusicarchive.org</a>. They
 	  have been visualized and analyzed as can be seen below. </p>
 
 	  
@@ -52,8 +53,8 @@
 				</tr></tbody>
 			</table>
 		<h4>Waveform and Spectrogram</h4>
-			<img src="images/MakiahFakeLoveWaveForm.png" alt="Makaih Beats - FakeLove Waveform" width="1000" height="300">
-			<img src="images/MakiahFakeLoveSpectrogram.png" alt="Makaih Beats - FakeLove Spectrogram" width="1000" height="300">
+			<img src="SonicVisualizerImages/MakiahFakeLoveWaveForm.png" alt="Makaih Beats - FakeLove Waveform" width="1000" height="300">
+			<img src="SonicVisualizerImages/MakiahFakeLoveSpectrogram.png" alt="Makaih Beats - FakeLove Spectrogram" width="1000" height="300">
 	  <h3>Running with Wise Fools - Krakatoa</h3>
 		<h4>Technical Metadata</h4>
 			<table>
@@ -85,8 +86,8 @@
 				</tr></tbody>
 			</table>
 		<h4>Waveform and Spectrogram</h4>
-			<img src="images/KrackatoaRunningWaveForm.png" alt="Krackatoa - Running wih Wise Fools Waveform" width="1000" height="300">
-			<img src="images/KrackatoaRunningSpectogram.png" alt="Krackatoa - Running wih Wise Fools Spectrogram" width="1000" height="300">
+			<img src="SonicVisualizerImages/KrackatoaRunningWaveForm.png" alt="Krackatoa - Running wih Wise Fools Waveform" width="1000" height="300">
+			<img src="SonicVisualizerImages/KrackatoaRunningSpectogram.png" alt="Krackatoa - Running wih Wise Fools Spectrogram" width="1000" height="300">
 	  <h3>66666666666666666666 66666666666666666666 66666666666666666666 66666666666666666666 66666666666666666666 6666666666666666666 - Monplaisir</h3>
 		<h4>Technical Metadata</h4>
 			<table>
@@ -118,8 +119,8 @@
 				</tr></tbody>
 			</table>
 		<h4>Waveform and Spectrogram</h4>
-			<img src="images/MonplaisirWaveform.png" alt="Monplaisir Waveform" width="1000" height="300">
-			<img src="images/MonplaisirSpectrogram.png" alt="Monplaisir Spectrogram" width="1000" height="300">
+			<img src="SonicVisualizerImages/MonplaisirWaveform.png" alt="Monplaisir Waveform" width="1000" height="300">
+			<img src="SonicVisualizerImages/MonplaisirSpectrogram.png" alt="Monplaisir Spectrogram" width="1000" height="300">
     </div>
 
   </body>
