--- a/SonicVisualiserFiles.html
+++ b/SonicVisualiserFiles.html
@@ -35,7 +35,7 @@
 					<th>File/Audio Format</th>
 					<th>Number of Channels</th>
 					<th>Sample Rate</th>
-					<th>KiloBytes Per Second</th>
+					<th>Bits Per Second</th>
 					<th>Duration</th>
 				</tr></thead>
 				<tbody><tr>
