--- a/SonicVisualiserFiles.html
+++ b/SonicVisualiserFiles.html
@@ -54,7 +54,7 @@
 			</table>
 		<h4>Waveform and Spectrogram</h4>
 			<img src="SonicVisualizerImages/MakiahFakeLoveWaveForm.png" alt="Makaih Beats - FakeLove Waveform" width="1000" height="300">
-			<img src="SonicVisualizerImages/MakiahFakeLoveSpectrogram.png" alt="Makaih Beats - FakeLove Spectrogram" width="1000" height="300">
+			<img src="SonicVisualizerImages/MakiahFakeLoveSpectogram.png" alt="Makaih Beats - FakeLove Spectrogram" width="1000" height="300">
 	  <h3>Running with Wise Fools - Krakatoa</h3>
 		<h4>Technical Metadata</h4>
 			<table>
@@ -120,7 +120,7 @@
 			</table>
 		<h4>Waveform and Spectrogram</h4>
 			<img src="SonicVisualizerImages/MonplaisirWaveform.png" alt="Monplaisir Waveform" width="1000" height="300">
-			<img src="SonicVisualizerImages/MonplaisirSpectrogram.png" alt="Monplaisir Spectrogram" width="1000" height="300">
+			<img src="SonicVisualizerImages/MonplaisirSpectrogram.png" alt="Monplaisir Spectogram" width="1000" height="300">
     </div>
 
   </body>
