--- a/SonicVisualiserFiles.html
+++ b/SonicVisualiserFiles.html
@@ -120,7 +120,7 @@
 			</table>
 		<h4>Waveform and Spectrogram</h4>
 			<img src="SonicVisualizerImages/MonplaisirWaveform.png" alt="Monplaisir Waveform" width="1000" height="300">
-			<img src="SonicVisualizerImages/MonplaisirSpectrogram.png" alt="Monplaisir Spectogram" width="1000" height="300">
+			<img src="SonicVisualizerImages/MonplaisirSpectogram.png.png" alt="Monplaisir Spectogram" width="1000" height="300">
     </div>
 
   </body>
