--- a/index-meta.html
+++ b/index-meta.html
@@ -55,6 +55,14 @@
            /* If your element does not have an authURI attribute, copy the following line, being sure to replace the "MY-XML-ID" with your element's actual xml:id.
             document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='m-8']").textContent + "</p>"
             */
+		        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='ffvii-fd']").textContent + "</p>"
+		        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='fd-ts']").textContent + "</p>"
+		        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='resp-1']").textContent + "</p>"
+		        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='resp-2']").textContent + "</p>"
+		        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='resp-3']").textContent + "</p>"
+		        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='resp-4']").textContent + "</p>"
+                        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='e-1']").textContent + "</p>"
+		        document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='edition']").textContent + "</p>"        
 			document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='t-1']").textContent + "</p>"
 			document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='t-2']").textContent + "</p>"
 			document.querySelector("#meta").innerHTML += "<p>" + meiDoc.querySelector("[*|id='c-1']").textContent + "</p>"
