--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	  <li><p><a href="https://Wudidge28.github.io/MCA/FFVII.html">Final Fantasy VIi Victory Fanfare</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/about.html">About</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/SonicVisualiserFiles.html">Sonic Visualizer Analysis</a><p></li>
-	    </ul>
+	  <li><p><a href="https://Wudidge28.github.io/MCA/featuresanalysis.html">Sonic Visualizer Files Features Analysis</a><p></li>
+</ul>
     </div>
 
   </body>
