--- a/featuresanalysis.html
+++ b/featuresanalysis.html
@@ -28,12 +28,12 @@
 	  <h3>Krackatoa - Running With Wise Fools</h3>
 		<h4>Acoustic Analysis</h4>
 				<img src="SonicVisualizerImages/RunningwithFools.png" alt="Krackatoa - Running With Wise Fools Waveform/Spectrogram/Chromagram/MFCC" width="900" height="500">
-				<img src="SonicVisualizerImages/KrakatoaAllFeatures.png" alt="Krackatoa - Running With Wise Fools FeaturesAnalysis" width="600" height="450">
+				<img src="SonicVisualizerImages/KrakatoaAllFeatures.png" alt="Krackatoa - Running With Wise Fools Features Analysis" width="600" height="450">
 	  <h3>Monplaisir - 66666666666666666666_66666666666666666666_66666666666666666666_66666666666666666666_66666666666666666666_66666666666666666666</h3>
 		<h4>Acousitc Analysis</h4>
 			<h5>Spectrogram</h5>
 				<img src="SonicVisualizerImages/Monplaisir.png" alt="Monplaisir - Running With Wise Fools Waveform/Spectrogram/Chromagram/MFCC"width="900" height="500">
-				<img src="SonicVisualizerImages/.png" alt="Monplaisir Features Analysis" width="600" height="450">
+				<img src="SonicVisualizerImages/MonplaisirAllFeatures.png" alt="Monplaisir Features Analysis" width="600" height="450">
     </div>
 
   </body>
