--- a/FFVII.html
+++ b/FFVII.html
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-      <h1>Gregor Long Music Analytics Project</h1>
+      <h1><a href="https://wudidge28.github.io/MCA/">Gregor Long Music Analytics Project</a></h1>
       <h2>Compisition Metadata</h2>
       <p id="meta"></p>
 
