--- a/lavandertown.html
+++ b/lavandertown.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Pokemon: Lavander Town Theme- Gregor Long</title>
+    <title>Pokemon: Lavander Town Theme - Gregor Long</title>
     <meta charset="utf-8">
     <meta name="description" content="Music Analytics Project">
     <meta name="author" content="Gregor Long">
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-      <h1>Gregor Long Music Analytics Project</h1>
+      <h1><a href="https://wudidge28.github.io/MCA/">Gregor Long Music Analytics Project</a></h1>
       <h2>Composition Metadata</h2>
       <p id="meta"></p>
 
