--- a/featuresanalysis.html
+++ b/featuresanalysis.html
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-      <h1>Gregor Long Music Analytics Project</h1>
+	  <h1><a href= "https://wudidge28.github.io/MCA>Gregor Long Music Analytics Project</a></h1>
 	  <h2>Comparing Acoustic Anlysis of Music Through Sonic Visualiser and Python</h2>
     <p>The visualisations below are from the SonicVisualizer Files found on the<a href="https://wudidge28.github.io/MCA/SonicVisualiserFiles.html">SonicVisualizer page.</a>
 	     The analysis below is from using Mel-frequency cepstral coefficients (MFCCs) and Chromagram features, then exporting
@@ -31,7 +31,6 @@
 				<img src="SonicVisualizerImages/KrakatoaAllFeatures.png" alt="Krackatoa - Running With Wise Fools Features Analysis" width="600" height="450">
 	  <h3>Monplaisir - 66666666666666666666_66666666666666666666_66666666666666666666_66666666666666666666_66666666666666666666_66666666666666666666</h3>
 		<h4>Acousitc Analysis</h4>
-			<h5>Spectrogram</h5>
 				<img src="SonicVisualizerImages/Monplaisir.png" alt="Monplaisir - Running With Wise Fools Waveform/Spectrogram/Chromagram/MFCC"width="900" height="500">
 				<img src="SonicVisualizerImages/MonplaisirAllFeatures.png" alt="Monplaisir Features Analysis" width="600" height="450">
     </div>
