--- a/featuresanalysis.html
+++ b/featuresanalysis.html
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-	  <h1><a href= "https://wudidge28.github.io/MCA>Gregor Long Music Analytics Project</a></h1>
+	  <h1><a href= "https://wudidge28.github.io/MCA">Gregor Long Music Analytics Project</a></h1>
 	  <h2>Comparing Acoustic Anlysis of Music Through Sonic Visualiser and Python</h2>
     <p>The visualisations below are from the SonicVisualizer Files found on the<a href="https://wudidge28.github.io/MCA/SonicVisualiserFiles.html">SonicVisualizer page.</a>
 	     The analysis below is from using Mel-frequency cepstral coefficients (MFCCs) and Chromagram features, then exporting
