--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	  
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-      <h1>Gregor Long Music Analytics 2018</h1>
+	  <h1><a href="https://wudidge28.github.io/MCA">Gregor Long Music Analytics 2018</a></h1>
 	  <p>For My Music Analytcis Project, I have transcribed, encoded and analysed three tracks which are recongised from video games.
 	   Below you are able to view these files as well as the relevant technical and descriptivedata for each composition. Furthermore,
 	   each track has visualisations available too which allow for analysis.</p>
