--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Gregor Long Music Analytics 2018</title>
     <meta charset="utf-8">
-    <meta name="description" content="Music Ana;lytics project">
+    <meta name="description" content="Music Analytics project">
     <meta name="author" content="Gregor Long">
     <link rel="stylesheet" href="css/style.css" media="all" />
     <script src="js/verovio-toolkit.js"></script>
@@ -16,7 +16,7 @@
 	  
     <div id="content">
       <!-- ADD YOUR HTML CONTENT HERE! -->
-	  <h1><a href="https://wudidge28.github.io/MCA">Gregor Long Music Analytics 2018</a></h1>
+	  <h1><a href="https://wudidge28.github.io/MCA">Gregor Long Music Analytics Project</a></h1>
 	  <p>For My Music Analytcis Project, I have transcribed, encoded and analysed three tracks which are recongised from video games.
 	   Below you are able to view these files as well as the relevant technical and descriptivedata for each composition. Furthermore,
 	   each track has visualisations available too which allow for analysis.</p>
@@ -28,6 +28,7 @@
 	  <li><p><a href="https://Wudidge28.github.io/MCA/about.html">About</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/SonicVisualiserFiles.html">Sonic Visualizer Analysis</a><p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/featuresanalysis.html">Sonic Visualizer Files Features Analysis</a><p></li>
+	  <li><p><a href="https://Wudidge28.github.io/MCA/similaritymatrix.html">Similarity between tracks and transcription data types</a><p></li>
 </ul>
     </div>
 
