--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 	  <h1><a href="https://wudidge28.github.io/MCA">Gregor Long Music Analytics Project</a></h1>
 	  <p>For My Music Analytcis Project, I have transcribed, encoded and analysed three tracks which are recongised from video games.
 	   Below you are able to view these files as well as the relevant technical and descriptivedata for each composition. Furthermore,
-	   each track has visualisations available too which allow for analysis.</p>
+	   each track has visualisations available too which allow for analysis. Information Regarding the dataset them can be found in the 'Readme'
+	   file in the repository.</p>
 	    <h2> Links</h2>
-  <ul>
+  <h2><ul>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/MiiChannel.html">Mii Channel Theme</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/lavandertown.html">Pokemon Lavander Town Music</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/FFVII.html">Final Fantasy VIi Victory Fanfare</a></p></li>
-	  <li><p><a href="https://Wudidge28.github.io/MCA/about.html">About</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/SonicVisualiserFiles.html">Sonic Visualizer Analysis</a><p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/featuresanalysis.html">Sonic Visualizer Files Features Analysis</a><p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/similaritymatrix.html">Similarity between tracks and transcription data types</a><p></li>
-</ul>
+	  </ul></h2>
     </div>
 
   </body>
