--- a/similaritymatrix.html
+++ b/similaritymatrix.html
@@ -23,12 +23,12 @@
 	  <h3>Similarity Matrix</h3>
 	  <p>These images are collated from the raw featres the tracks found in The Similarity Matrx folder which includes 3 of my tracks as raw csv. files and demo tracks./p>
 		
-		<img src="SimilarityMatrix.png" alt="Graph showing similarity between genres" width="300" height="300">
+		<img src="SimilarityMatrix.png" alt="Graph showing similarity between genres" align="left" width="300" height="300">
 		<img src="HeatMap.png" alt="Similarity matrix of A and C notes">
 		<img src="HeatMap12.png" alt="Similarity matrix of every note">
 	
 	<h3>Similarity Comparison between Notated and Acoustic Musical Data</h2>
-        <p>The two transcriptions below are from my <a href = "https://wudidge28.github.io/MCA/lavandertown><b>Lavender Town</b></a> track,
+        <p>The two transcriptions below are from my <b>Lavender Town</b> track,
         one from MuseScore and the other which was trancribed from MuseScore into SonicVisualizer and back again.</p>
     
         <img src="Trancription Comparison/Lavender Town-1.png" alt="The Original MuseScore Lavender Town Transcription" width="300" height="300">
