--- a/similaritymatrix.html
+++ b/similaritymatrix.html
@@ -17,7 +17,7 @@
       <!-- ADD YOUR HTML CONTENT HERE! -->
       <h1><a href="https://wudidge28.github.io/MCA">Gregor Long Music Analytics Project</a></h1>
       <h2>Similarity Comparisons Using music21 </h2>
-      <p>Using a selection of demo tracks provided and then byentering my owj trancscriptions, the following page shows a similarity matrix
+      <p>Using a selection of demo tracks provided and then by entering my own trancscriptions, the following page shows a similarity matrix
        and heat map comparing the genre of tracks, followed by a comparison of transcriptions from two different data types.</p>
        
 	  <h3>Similarity Matrix</h3>
@@ -28,7 +28,7 @@
 		<img src="HeatMap12.png" alt="Similarity matrix of every note">
 	
 	<h3>Similarity Comparison between Notated and Acoustic Musical Data</h2>
-        <p>The two transcriptions below are from my <b>Lavender Town</b> track,
+        <p>The two transcriptions below are from my <a href="https://wudidge28.github.io/MCA/lavandertown.html"><b>Lavender Town</b></a> track,
         one from MuseScore and the other which was trancribed from MuseScore into SonicVisualizer and back again.</p>
     
         <img src="Trancription Comparison/Lavender Town-1.png" alt="The Original MuseScore Lavender Town Transcription" width="300" height="300">
