--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h2><ul>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/MiiChannel.html">Mii Channel Theme</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/lavandertown.html">Pokemon Lavander Town Music</a></p></li>
-	  <li><p><a href="https://Wudidge28.github.io/MCA/FFVII.html">Final Fantasy VIi Victory Fanfare</a></p></li>
+	  <li><p><a href="https://Wudidge28.github.io/MCA/FFVII.html">Final Fantasy VII Victory Fanfare</a></p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/SonicVisualiserFiles.html">Sonic Visualizer Analysis</a><p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/featuresanalysis.html">Sonic Visualizer Files Features Analysis</a><p></li>
 	  <li><p><a href="https://Wudidge28.github.io/MCA/similaritymatrix.html">Similarity between tracks and transcription data types</a><p></li>
