--- a/similaritymatrix.html
+++ b/similaritymatrix.html
@@ -21,7 +21,7 @@
        and heat map comparing the genre of tracks, followed by a comparison of transcriptions from two different data types.</p>
        
 	    <h3>Similarity Matrix</h3>
-	    <p>These images are collated from the raw featres the tracks found in The Similarity Matrx folder which includes 3 of my tracks as raw csv. files and demo tracks./p>
+	    <p>These images are collated from the raw featres the tracks found in The Similarity Matrx folder which includes 3 of my tracks as raw csv. files and demo tracks.</p>
 	    <br>
 	
 		<img src="SimilarityMatrix.png" alt="Graph showing similarity between genres" align="left" width="300" height="300">
