Update and rename lavandertown.html to lavendertown.html

--- a/lavendertown.html
+++ b/lavendertown.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Pokemon: Lavander Town Theme - Gregor Long</title>
+    <title>Pokemon: Lavender Town Theme - Gregor Long</title>
     <meta charset="utf-8">
     <meta name="description" content="Music Analytics Project">
     <meta name="author" content="Gregor Long">
